@@ -1,6 +1,8 @@
 *** ?.?.? (TBD)
     - Fixed "None" option text in the English version of the app.
     - Updated translations: French, Italian, and Spanish.
+    - Target SDK version has been increased from 24 (Android 7.0) to 25
+      (Android 7.1).
 
 *** 2.11.1 (2022-05-07)
     - The app no longer requires a special wake lock permission for keeping the
